fix(problem): fix extra margin in responsive layout of second action menu

--- a/src/pages/problem/ProblemPage.module.less
+++ b/src/pages/problem/ProblemPage.module.less
@@ -67,10 +67,15 @@
 
 .secondActionMenu {
   margin-top: 40px !important;
+
+  &:empty {
+    margin-top: 0 !important;
+  }
 }
 
 .actionMenu {
   min-height: 0 !important;
+  margin-bottom: 0 !important;
 
   border-right: none !important;
   border-left-width: 2px !important;
@@ -224,6 +229,10 @@
 
   .secondActionMenu {
     margin-top: 30px !important;
+
+    &:empty {
+      margin-top: 0 !important;
+    }
   }
 
   .actionMenu {
